fix: Navbar visibility in mobile devices fixed

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -70,8 +70,13 @@
     margin: 2rem 0;
     margin-top: 3rem;
     padding-left: 2rem;
+    font-family: 'Open Sans', sans-serif;
 }
-
+.events h2
+{
+    
+  font-family: 'Open Sans', sans-serif;
+}
 
 @media screen and (max-width: 850px)
 {
@@ -100,6 +105,7 @@
     {
         padding: 2rem;
         margin-left: 0;
+        margin-top: 3rem;
 
     }
     .events{
