--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -12,7 +12,7 @@
     align-items: center; */
   height: 54px;
   display: flex;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
   padding: 0 45px;
 
   font-family: 'Roboto', sans-serif;
@@ -29,7 +29,7 @@
 .nav-items ul {
   display: flex;
   /* flex-direction: column; */
-
+  margin-top: 0;
   padding: 10px;
   gap: 40px;
 }
@@ -82,13 +82,19 @@
 @media screen and (max-width: 850px) {
   .nav {
     padding-left: 12px;
-  }
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+    top: 1px;
+    background-color: #fff;
+}
+  
   .nav-items {
     position: fixed;
     right: 13px;
     width: 100vw;
     top: 40px;
-
+    z-index: 2;
     pointer-events: none;
     transition: all 0.3s ease;
     opacity: 0;
